--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.header .logo {
+  width: 7%;
+  margin: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header .logo img {
+  width: 100%;
+}
+.header .search-bar {
+  flex: 8;
+  width: 80%;
+  margin-top: 30px;
+}
+.header .search-bar input {
+  width: 80%;
+  padding: 10px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  background: #f7f7f7;
+}
+.header .search-bar .search-btn {
+  vertical-align: middle;
+  margin: 0 20px 3px;
+  padding: 3px 5px;
+  cursor: pointer;
+}
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper .poster {
+  margin-left: 20px;
+  flex: 1;
+}
+.wrapper .movie-data {
+  display: flex;
+  flex: 3;
+  align-items: left;
+}
+.top-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0 30px;
+}
+.top-wrapper .meta-data {
+  display: flex;
+}
+.top-wrapper .meta-data p {
+  margin: 0 30px;
+  text-align: center;
+  font-size: 20px;
+}
+.top-wrapper .meta-data p span {
+  font-size: 15px;
+  font-weight: 600;
+}
+.wrapper .movie-info .title {
+  font-size: 50px;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+.wrapper .movie-info p {
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+.wrapper .production-team p {
+  border-bottom: 1px solid #808080;
+  padding-bottom: 15px;
+  
+  margin-right: 20px;
+}
+.wrapper .production-team p:first-child {
+  border-top: 1px solid #808080;
+  padding-top: 15px;
+}
+.wrapper .production-team span {
+  font-weight: 600;
+  margin-right: 10px;
 }
